# poetry-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .coveragerc  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
