[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
maintainers = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
homepage = "https://rasa.com"
repository = "https://github.com/rasahq/rasa"
classifiers = [ ]
keywords = [ ]
include = [ "LICENSE.txt", "README.md" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"
tox = "^3.14.5"
flake8 = "^3.7.9"
pytype = "^2020.2.20"
pre-commit = "^2.1.1"
coverage = "^5.0.3"

[tool.black]
line-length = 88
target-version = [ "py{{cookiecutter.python_version}}",]
exclude = "((.eggs | .git | .pytype | .pytest_cache | build | dist))"


[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
